kubernetes/k8s-practise/ingress/http-whoami.example.com.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: http-whoami
  labels:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: http-whoami.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-whoami
            port:
              name: http
